k8s/03-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ecommerce
spec:
  replicas: 2 # Alta disponibilidade (2 containers rodando)
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          # TROQUE PELA URL DO SEU ECR (ex: 1234.dkr.ecr.../backend-repo:latest)
          image: 104790431359.dkr.ecr.us-east-1.amazonaws.com/cloudnativeapp-backend-repo:latest 
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service # Nome DNS interno
  namespace: ecommerce
spec:
  type: ClusterIP # Só acessível de dentro do cluster
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80      # Porta do Serviço
      targetPort: 3000 # Porta do Container
